--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tmpl
@@ -6,7 +6,7 @@
 <!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script type="text/JavaScript" language="JavaScript">
-
+//<![CDATA[
     /**
     *  MoreBorrowerDetails();
     *  This function displays or not borrower information.
@@ -52,7 +52,7 @@
             }
         }
     }
-
+//]]>
 </script>
 
 </head>
@@ -887,6 +887,7 @@ No patron matched <!-- TMPL_VAR name="message" -->
 </div>
 <div class="yui-b">
 <!-- TMPL_INCLUDE NAME="circ-menu.inc" -->
+<!-- TMPL_INCLUDE NAME="members-menu.inc" -->
 </div>
 </div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
