--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqbookfund.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqbookfund.tmpl
@@ -1,16 +1,18 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; System Administration: Funds and Budgets</title>
+<title>Koha &rsaquo; Administration &rsaquo; Funds and Budgets</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; Funds and Budgets </div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- TMPL_IF name="else" -->
 <h1>Funds and budgets administration</h1>
@@ -103,21 +105,22 @@
 <!-- /TMPL_IF --> <!-- else -->
 
 <!-- TMPL_IF name="add_form" -->
-<script>
-	//
+<script type="text/javascript">
+//<![CDATA[
+
 	function isNotNull(f,noalert) {
 		if (f.value.length ==0) {
    return false;
 		}
 		return true;
 	}
-	//
+
 	function toUC(f) {
 		var x=f.value.toUpperCase();
 		f.value=x;
 		return true;
 	}
-	//
+
 	function isNum(v,maybenull) {
 	var n = new Number(v.value);
 	if (isNaN(n)) {
@@ -128,14 +131,14 @@
 	}
 	return true;
 	}
-	//
+
 	function isDate(f) {
 		var t = Date.parse(f.value);
 		if (isNaN(t)) {
 			return false;
 		}
 	}
-	//
+
 	function Check(f) {
 		var ok=1;
 		var _alertString="";
@@ -155,7 +158,8 @@
 			alert(alertString2);
 		}
 	}
-	</script>
+	//]]>
+</script>
 
 <form action="<!-- TMPL_VAR name="action" -->" name="Aform" method="post">
   <input type="hidden" name="op" value="add_validate" />
@@ -184,12 +188,7 @@
     <tr>
       <th>Name</th>
       <td>
-        <input type="text"
-               name="bookfundname"
-               size="40"
-          maxlength="80"
-              value="<!-- TMPL_VAR name="bookfundname" escape="HTML" -->"
-        />
+        <input type="text" name="bookfundname" size="40" maxlength="80" value="<!-- TMPL_VAR name="bookfundname" escape="HTML" -->" />
       </td>
     </tr>
 
@@ -205,6 +204,7 @@
           <option value="<!-- TMPL_VAR NAME="branchcode" -->"><!-- TMPL_VAR NAME="branchname" --></option>
     <!-- /TMPL_IF -->
   <!-- /TMPL_LOOP -->
+  	</select>
       </td>
     </tr>
     
@@ -269,7 +269,8 @@
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="admin-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
