--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqbudget.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqbudget.tmpl
@@ -1,14 +1,18 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; System Administration &rsaquo; Budgets</title>
+<title>Koha &rsaquo; Administration &rsaquo; Budgets</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- Additions to enable Calendar system -->
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css" />
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-en.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-setup.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar.js">//]]>
+</script>
+<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-en.js">//]]>
+</script>
+<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-setup.js">//]]>
+</script>
 <!-- End of additions -->
 <!-- TMPL_IF name="add_form" -->
 <script type="text/javascript">
+//<![CDATA[
 	//
 	function isNotNull(f,noalert) {
 		if (f.value.length ==0) {
@@ -60,21 +64,20 @@
 			alert(alertString2);
 		}
 	}
+//]]>
 </script>
 <!-- /TMPL_IF -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 
-
-
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; Budgets</div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <ul id="_informations">
 <!-- TMPL_IF NAME="add_validate" -->
@@ -148,6 +151,7 @@
       <input type="text" size="10" id="filter_startdate" name="filter_startdate" value="<!-- TMPL_VAR Name="filter_startdate" -->" />
       <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="filter_startdate_button" />
       <script type="text/javascript">
+//<![CDATA[
         Calendar.setup(
           {
             inputField : "filter_startdate",
@@ -155,7 +159,8 @@
             button : "filter_startdate_button"
           }
         );
-      </script>
+      //]]>
+</script>
     </td>
     <td>
       <select name="filter_enddate_sign">
@@ -180,6 +185,7 @@
       <input type="text" size="8" maxlength="10" id="filter_enddate" name="filter_enddate" value="<!-- TMPL_VAR Name="filter_enddate" -->" />
       <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="filter_enddate_button" />
       <script type="text/javascript">
+//<![CDATA[
         Calendar.setup(
           {
             inputField : "filter_enddate",
@@ -187,7 +193,8 @@
             button : "filter_enddate_button"
           }
         );
-      </script>
+      //]]>
+</script>
     </td>
     <td>
       <select name="filter_amount_sign">
@@ -265,6 +272,7 @@
           <input type="text" size="8" maxlength="10" id="startdate" name="startdate" value="<!-- TMPL_VAR Name="startdate" -->" />
           <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="startdate_button" />
           <script type="text/javascript">
+//<![CDATA[
             Calendar.setup(
               {
                 inputField : "startdate",
@@ -272,7 +280,8 @@
                 button : "startdate_button"
               }
             );
-          </script>
+          //]]>
+</script>
         </td>
       </tr>
       <tr>
@@ -283,6 +292,7 @@
           <input type="text" size="8" maxlength="10" id="enddate" name="enddate" value="<!-- TMPL_VAR Name="enddate" -->" />
           <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="enddate_button" alt="" />
           <script type="text/javascript">
+//<![CDATA[
             Calendar.setup(
               {
                 inputField : "enddate",
@@ -290,7 +300,8 @@
                 button : "enddate_button"
               }
             );
-          </script>
+          //]]>
+</script>
         </td>
       </tr>
       <tr>
@@ -375,7 +386,8 @@
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="admin-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
