--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/checkmarc.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/checkmarc.tmpl
@@ -1,18 +1,19 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; System Administration &rsaquo; MARC Check &rsaquo;
-<!-- TMPL_IF name="total" --><!-- TMPL_VAR name="total" --> errors found<!-- TMPL_ELSE -->Configuration OK!<!-- /TMPL_IF --></title>
+<title>Koha &rsaquo; Administration &rsaquo; MARC Check
+<!-- TMPL_IF name="total" --> &rsaquo; <!-- TMPL_VAR name="total" --> errors found<!-- TMPL_ELSE --> &rsaquo; Configuration OK!<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; MARC Check
+<!-- TMPL_IF name="total" --> &rsaquo; <!-- TMPL_VAR name="total" --> errors found<!-- TMPL_ELSE --> &rsaquo; Configuration OK!<!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <h1>MARC Checking</h1>
 <table>
@@ -145,7 +146,8 @@
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="admin-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
