--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/cities.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/cities.tmpl
@@ -1,7 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; System administration &rsaquo; Cities</title>
+<title>Koha &rsaquo; Administration &rsaquo; Cities</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script type="text/javascript">
+//<![CDATA[
 		/////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 		function isNotNull(f,noalert) {
 			if (f.value.length == 0) {
@@ -46,17 +47,19 @@
 			document.Aform.submit();
 			}
 		}
+//]]>
 </script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; Cities</div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- TMPL_IF NAME="add_form" -->
 	<!-- TMPL_IF NAME="cityid" -->
@@ -183,8 +186,9 @@
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="admin-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
 
