--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/itemtypes.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/itemtypes.tmpl
@@ -1,6 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; System Administration &rsaquo;
-<!-- TMPL_IF name="add_form" -->
+<title>Koha &rsaquo; Administration &rsaquo;<!-- TMPL_IF name="add_form" -->
   <!-- TMPL_IF name="itemtype" -->
 Modify item type '<!-- TMPL_VAR name="itemtype" -->'
   <!-- TMPL_ELSE -->
@@ -22,6 +21,7 @@ Item Types Administration
 <!-- /TMPL_IF -->
 </title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" --><script type="text/javascript">
+//<![CDATA[
 
 function isNotNull(f,noalert) {
 	if (f.value.length ==0) {
@@ -76,39 +76,54 @@ function Check(f) {
 		alert(alertString2);
 	}
 }
+//]]>
 </script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; <!-- TMPL_IF name="add_form" -->
+  <!-- TMPL_IF name="itemtype" -->
+Modify item type '<!-- TMPL_VAR name="itemtype" -->'
+  <!-- TMPL_ELSE -->
+Add item type
+  <!-- /TMPL_IF -->
+<!-- /TMPL_IF -->
+<!-- TMPL_IF name="delete_confirm" -->
+  <!-- TMPL_IF name="total" -->
+Cannot Delete Item Type '<!-- TMPL_VAR name="itemtype" -->'
+  <!-- TMPL_ELSE -->
+Delete Item Type '<!-- TMPL_VAR name="itemtype" -->'?
+  <!-- /TMPL_IF -->
+<!-- /TMPL_IF -->
+<!-- TMPL_IF name="delete_confirmed" -->
+Data Deleted
+<!-- /TMPL_IF -->
+<!-- TMPL_IF name="else" -->
+Item Types Administration
+<!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- TMPL_IF name="add_form" -->
-
-<form action="<!-- TMPL_VAR name="script_name" -->" name="Aform" method="post">
-  <feldset>
-    <legend>
   <!-- TMPL_IF name="itemtype" -->
       <h3>Modify item type</h3>
   <!-- TMPL_ELSE -->
       <h3>Add item type</h3>
   <!-- /TMPL_IF -->
-    </legend>
-
-    <input type="hidden" name="op" value="add_validate" />
+<form action="<!-- TMPL_VAR name="script_name" -->" name="Aform" method="post">
+  <input type="hidden" name="op" value="add_validate" />
     <input type="hidden" name="checked" value="0" />
 		
     <table>
   <!-- TMPL_IF name="itemtype" -->
       <tr>
         <th>
-          <label for="">Item type</label>
+          <label>Item type</label>
         </th>
         <td>
           <input type="hidden" name="itemtype" value="<!-- TMPL_VAR name="itemtype" -->" />
@@ -154,7 +169,7 @@ function Check(f) {
             </label>
   <!-- /TMPL_LOOP -->
           </p>
-          <hr />
+
           <p>
             <label>
   <!-- TMPL_IF name="remote_image" -->
@@ -165,7 +180,7 @@ function Check(f) {
             remote image
             </label>
             <input type="text" name="remoteImage" size="48" maxlength="200" value="<!-- TMPL_VAR name="remote_image" -->" onmousedown="document.getElementById('remote_image_check').checked = true;" />
-            </label>
+
   <!-- TMPL_IF name="remote_image" -->
             <img src="<!-- TMPL_VAR name="remote_image" -->" alt="" />
   <!-- /TMPL_IF -->
@@ -194,10 +209,7 @@ function Check(f) {
           <label for="renewalsallowed">Renewals</label>
         </th>
         <td>
-          <input type="text" id="renewalsallowed" name="renewalsallowed" size="3" maxlength="3" value="
-  <!-- TMPL_IF name="renewalsallowed" -->
-          <!-- TMPL_VAR NAME="renewalsallowed" -->
-  <!-- /TMPL_IF -->" value="1" />
+	          <input type="text" id="renewalsallowed" name="renewalsallowed" size="3" maxlength="3" value="<!-- TMPL_VAR NAME="renewalsallowed" -->" />
         </td>
       </tr>
       <tr>
@@ -224,7 +236,6 @@ function Check(f) {
       <input type="button" value="Save Changes" onclick="Check(this.form)" />
       <input type="button" value="Cancel" onclick="history.back();" />
     </p>
-  </fieldset>
 </form>
 <!-- /TMPL_IF -->
 
@@ -306,7 +317,8 @@ function Check(f) {
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="admin-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
