--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/z3950servers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/z3950servers.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; System Administration &rsaquo; <!-- TMPL_IF NAME="else" -->z39.50 Servers<!-- /TMPL_IF -->
+<title>Koha &rsaquo; Administration &rsaquo; <!-- TMPL_IF NAME="else" -->z39.50 Servers<!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="add_form" --><!-- TMPL_IF NAME="searchfield" -->Modify z39.50 Server <!-- TMPL_VAR NAME="searchfield" --><!-- TMPL_ELSE -->Add z39.50 Server<!-- /TMPL_IF --><!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="delete_confirm" -->Confirm Deletion<!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="add_validate" -->z39.50 Server Added<!-- /TMPL_IF -->
@@ -8,6 +8,7 @@
 
 <!-- TMPL_IF NAME="add_form" -->
 <script type="text/javascript">
+//<![CDATA[
         //
         function isNotNull(f,noalert) {
                 if (f.value.length ==0) {
@@ -74,19 +75,25 @@
                         alert(alertString2);
                 }
         }
-        </script>
+        //]]>
+</script>
         <!-- /TMPL_IF -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="z3950-admin-search.inc" -->
 
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; <!-- TMPL_IF NAME="else" -->z39.50 Servers<!-- /TMPL_IF -->
+<!-- TMPL_IF NAME="add_form" --><!-- TMPL_IF NAME="searchfield" -->Modify z39.50 Server <!-- TMPL_VAR NAME="searchfield" --><!-- TMPL_ELSE -->Add z39.50 Server<!-- /TMPL_IF --><!-- /TMPL_IF -->
+<!-- TMPL_IF NAME="delete_confirm" -->Confirm Deletion<!-- /TMPL_IF -->
+<!-- TMPL_IF NAME="add_validate" -->z39.50 Server Added<!-- /TMPL_IF -->
+<!-- TMPL_IF NAME="delete_confirmed" -->z39.50 Server Deleted<!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- TMPL_IF NAME="add_form" -->
         
@@ -102,14 +109,14 @@
         <table>
         <!-- TMPL_IF NAME="searchfield" -->
                 <tr>
-                        <th>Z39.50 Server</th>
+                        <th scope="row">Z39.50 Server</th>
                         <td>
                                 <input type="hidden" name="searchfield" value="<!-- TMPL_VAR NAME="searchfield" -->" /><!-- TMPL_VAR NAME="searchfield" -->
                         </td>
                 </tr>
         <!-- TMPL_ELSE -->
                 <tr>
-                        <th>Z39.50 Server</th>
+                        <th scope="row">Z39.50 Server</th>
                         <td>
                                 <input type="text" name="searchfield" size="65" maxlength="100" onblur="toUC(this)" />
                         </td>
@@ -117,47 +124,47 @@
         <!-- /TMPL_IF -->
 
 		<tr>
-			<th>Hostname</th>
+			<th scope="row">Hostname</th>
 			<td>
 				<input type="text" name="host" size="30" value="<!-- TMPL_VAR NAME="host" -->" />
 			</td>
 		</tr>
 		<tr>
-			<th>Port</th>
+			<th scope="row">Port</th>
 			<td>
 				<input type="text" name="port" size="5" value="<!-- TMPL_VAR NAME="port" -->" onblur="isNum(this)" />
 			</td>
 		</tr>
 		<tr>
-			<th>Database</th>
+			<th scope="row">Database</th>
 			<td>
 				<input type="text" name="db" value="<!-- TMPL_VAR NAME="db" -->" />
 			</td>
 		</tr>
 		<tr>
-			<th>Userid</th>
+			<th scope="row">Userid</th>
 			<td>
 				<input type="text" name="userid" value="<!-- TMPL_VAR NAME="userid" -->" />
 			</td>
 		</tr>
 		<tr>
-			<th>Password</th>
+			<th scope="row">Password</th>
 			<td>
 				<input type="text" name="password" value="<!-- TMPL_VAR NAME="password" -->" />
 			</td>
 		</tr>
 		<tr>
-			<th>Checked (searched by default)</th>
+			<th scope="row">Checked (searched by default)</th>
 			<td>
-				<input type="text" size="1" name="checked" value="<!-- TMPL_VAR NAME="checked" -->" onblur="isNum(this)" />  
+				<input type="text" size="1" name="checked" value="<!-- TMPL_VAR NAME="checked" -->" onblur="isNum(this)" />  </td></tr>
 		<tr>
-			<th>Rank (display order)</th>
+			<th scope="row">Rank (display order)</th>
 			<td>
 				<input type="text" name="rank" size="4" value="<!-- TMPL_VAR NAME="rank" -->" onblur="isNum(this)" />
 			</td>
 		</tr>
 				<tr>
-			<th>Syntax (z3950 can send<br />
+			<th scope="row">Syntax (z3950 can send<br />
 			 records in various format. Choose one)</th>
 			<td>
 				<select name="syntax">
@@ -233,10 +240,7 @@
 
 <!-- TMPL_IF NAME="else" -->
 <h3>Z39.50 Servers Admininistration</h3>
-         <form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
-                <input type="text" name="description" value="<!-- TMPL_VAR NAME="searchfield" -->" />
-                <input type="submit" name="search" value="Search" />
-        </form>
+
         <!-- TMPL_IF NAME="searchfield" -->
                 You searched for <!-- TMPL_VAR NAME="searchfield" -->
         <!-- /TMPL_IF -->		
@@ -286,7 +290,8 @@
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="admin-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
