--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/branchoverdues.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/branchoverdues.tmpl
@@ -12,7 +12,7 @@
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 
 <h1>Circulation: Library Overdues at <!-- TMPL_VAR NAME="LoginBranchname" --></h1>
@@ -178,9 +178,11 @@
             </table>
         </fieldset>
     <!-- /TMPL_IF -->
-</div>
-</div>
-</div>
 
+</div>
+</div>
+<div class="yui-b">
 <!-- TMPL_INCLUDE NAME="circ-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
