--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/stats.tmpl
@@ -12,7 +12,7 @@
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
     <!-- TMPL_IF NAME="notime" -->
         <h1>Display statistics for:</h1>
@@ -48,7 +48,8 @@
     <!-- /TMPL_IF -->
 </div>
 </div>
-</div>
-
+<div class="yui-b">
 <!-- TMPL_INCLUDE NAME="circ-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
