--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/transferstodo.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/transferstodo.tmpl
@@ -12,7 +12,7 @@
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 
     <h1>Transfers to do <!-- TMPL_VAR NAME="show_date" --></h1>
@@ -73,7 +73,8 @@
 
 </div>
 </div>
-</div>
-
+<div class="yui-b">
 <!-- TMPL_INCLUDE NAME="circ-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
