--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/transferstoreceive.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/transferstoreceive.tmpl
@@ -12,7 +12,7 @@
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 
 	<h1>Transfers made TO your library on : <!-- TMPL_VAR NAME="show_date" --></h1>
@@ -80,7 +80,8 @@
 
 </div>
 </div>
-</div>
-
+<div class="yui-b">
 <!-- TMPL_INCLUDE NAME="circ-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
